  * Debian: Raised Debian compatibility level to Debian 9 "Stretch".
  * Raised max. pitchbend range to 48 semi tones.
  * Added experimental support for upcoming GTK(MM)4
    (for now up to GTKMM 3.91.2 while still preserving backward compatibility
    down to GTKMM 2).
  * Re-merged r2845 to compile now with and without Gtk "Stock ID" API
    (see also r3158).

Version 1.0.0 (2015-07-17)

  * minor fix in configure for cross-compiling
  * minor Makefile fix for parallel make
  * use Cairo instead of deprecated gdk drawing primitives
  * avoid deprecated gtk methods when using newer gtk versions
  * raised minimum supported gtkmm version to 2.8
  * ported to gtkmm 3, keeping compatibility with gtkmm 2
  * gtkmm 3 fix: rewrote the custom widgets (regionchooser and
    dimregionchooser) so they only draw pixels in the on_draw
    method. This should make them work again in newer gtkmm 3
    environments.
  * added support for new glibmm threads API
  * gtkmm 3 fix: the WrapLabel custom widget is not needed in gtkmm 3
  * fixed building on Debian testing (#186)
  * modernized configure script
  * added graphical curves for velocity response and crossfade
  * added "Duplicate Instrument" function
  * fixed import of 32 bit float wav files
  * code refactoring: created a PropEdit class for property editor
    windows, moved Table class from mainwindow to paramedit
  * minor gui tweaks: made note entry fields a bit wider, set a
    minimum width for scales
  * bug fix: avoid stale information in the instrument properties
    window when a new file is loaded or the instrument is removed
  * cross fade graph: draw curves of all layers in the same graph
  * made sure the instruments menu is updated when instruments are
    added, removed or renamed
  * fixed name entry field in instrument properties window
  * use character encoding Windows-1252 for all strings in gig files
  * show dimension zone start and end as numeric text labels